morereacting with react

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ age: 24
              e.preventDefault();
 
          }
-         handleMouseOver = (e) => {
-             console.log(e)
+        //  handleMouseOver = (e) => {
+        //      console.log(e)
 
-         }
+        //  }
          handleCopy = (e) => {
              console.log('asdasd')
 
