--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/babel">
      class App extends React.Component {
          state = {
-name: '',
+name: 'lol',
 age: 24
          }
          handleClick = (e) => {
