--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ age: 24
                     <h1>submited text :{this.state.name}</h1>
                     <button onClick={this.handleClick}> Click Me </button>
                     <button onMouseOver={this.handleMouseOver}> Hover </button>
-                    <p onCopy={this.handleCopy}>asdasdasd adasd asdsqaa</p>
+                    <p onCopy={this.handleCopy}>asdasdas asdsqaa</p>
                     <form onSubmit={this.handleSubmit}>
 
                         <input type="text" onChange={this.handleChange} />
